# paredros-app

./: .gitignore  README.md  index.html  package.json  requirements.txt  setup.sh  setup1.bat  setup2.bat  vite.config.ts
.github/workflows/: tauri-publish.yml
example/Regest/: Regest.interp  RegestLexer.g4  RegestLexer.interp  RegestListener.py  RegestParser.g4  input.txt
examples/Regest/: Regest.g4  RegestLexer.py  RegestParser.py
src/: App.css  App.tsx  constants.ts  grammarHelpers.ts  parseTreeHelpers.ts
src-python/: __main__.py
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/paredros-debugger/: ParseStep.py  get_parse_info.py  main.py
src-tauri/src/: main.rs  python_env.rs
src/components/: ErrorDialog.tsx  FlowPlot.tsx  GrammarFilesDataProvider.ts  LinePlot.tsx  LoadingOverlay.tsx  ParseTreeNodeComponent.tsx  ParseTreeOverlays.tsx  PythonSetupComponent.tsx  PythonSetupListener.ts  UnhandledRejectionDialog.tsx  useKeyPress.ts
src/components/ui/: button.tsx  input.tsx
src/interfaces/: ParseNode.ts  ParseTreeNode.ts  PySetupProgress.ts  PySetupProgressType.ts  UserGrammar.ts
