[package]
name = "paredros-app"
version = "0.1.0"
description = "A web frontend to the grammar debugging IDE Paredros."
authors = ["Daniel Motz"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.17.1"
uuid = { version = "1.3", features = ["v4"] }
pyo3 = { version = "0.25", features = ["auto-initialize"] } # https://github.com/PyO3/pyo3/discussions/2995
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
pythonize = "0.25"
anyhow = "1"
which = "6"
sha2 = "0.10"
thiserror = "1"
